syntax = "proto3";
package IronPdfEngine.Proto;
import "PdfDocument.proto";

option java_package = "com.ironsoftware.ironpdf.internal.proto";
option java_multiple_files = true;

message CompressImagesRequest{
  PdfDocument document = 1;
  int32 quality = 2;
  bool  scale_to_visible_size = 3;
}
